datatable CSS fix so the footer doesn't overlap with the table in some browsers
git-svn-id: https://plugins.svn.wordpress.org/events-made-easy/trunk@1151743 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/events_manager.css
+++ b/events_manager.css
@@ -257,3 +257,9 @@ table.fullcalendar td.eventless-today, table.fullcalendar td.eventful-today {
 #honeypot_check { display: none; }
 /* for the datepicker at the bottom of the edit/new event page, render it invisible */
 #ui-datepicker-div { display: none; }
+
+/* datatable fix so the footer doesn't overlap with the table in some browsers */
+.dataTables_wrapper {
+  float: left;
+  width: 100%;
+}
